fixed extra space at bottom in home page

--- a/static/styles.css
+++ b/static/styles.css
@@ -38,6 +38,7 @@ a:hover {
     text-align: center;
     padding: 20px 0;
     min-height: 300px;
+    max-height: 400px;
 }
 
 #herobanner {
@@ -49,7 +50,7 @@ a:hover {
     background-color: #212121;
     color: #eeeeee;
     text-align: center;
-    margin: 20px 0;
+    margin: 20px 0 0 0;
     font-family: 'Ubuntu', sans-serif;
 }
 
